test.log
FAIL src/adapters/AstroAdapter.test.ts
  ● Test suite failed to run

    SyntaxError: /Users/crapougnax/CODE/QUATRAIN/Core/packages/api-server-astro/src/adapters/AstroAdapter.test.ts: Unexpected token, expected "," (10:18)

       8 |
       9 | afterAll(() => {
    > 10 |    ;(console.warn as jest.Mock).mockRestore()
         |                   ^
      11 | })
      12 |
      13 | describe('AstroAdapter', () => {

      at constructor (../../node_modules/@babel/parser/src/parse-error.ts:95:45)
      at Parser.toParseError [as raise] (../../node_modules/@babel/parser/src/tokenizer/index.ts:1504:19)
      at Parser.raise [as unexpected] (../../node_modules/@babel/parser/src/tokenizer/index.ts:1544:16)
      at Parser.unexpected [as expect] (../../node_modules/@babel/parser/src/parser/util.ts:157:12)
      at Parser.expect [as parseParenAndDistinguishExpression] (../../node_modules/@babel/parser/src/parser/expression.ts:1801:14)
      at Parser.parseParenAndDistinguishExpression [as parseExprAtom] (../../node_modules/@babel/parser/src/parser/expression.ts:1170:21)
      at Parser.parseExprAtom [as parseExprSubscripts] (../../node_modules/@babel/parser/src/parser/expression.ts:742:23)
      at Parser.parseExprSubscripts [as parseUpdate] (../../node_modules/@babel/parser/src/parser/expression.ts:721:21)
      at Parser.parseUpdate [as parseMaybeUnary] (../../node_modules/@babel/parser/src/parser/expression.ts:683:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (../../node_modules/@babel/parser/src/parser/expression.ts:417:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (../../node_modules/@babel/parser/src/parser/expression.ts:429:23)
      at Parser.parseExprOps [as parseMaybeConditional] (../../node_modules/@babel/parser/src/parser/expression.ts:384:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (../../node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at Parser.parseMaybeAssign [as parseExpressionBase] (../../node_modules/@babel/parser/src/parser/expression.ts:226:23)
      at parseExpressionBase (../../node_modules/@babel/parser/src/parser/expression.ts:217:39)
      at Parser.callback [as allowInAnd] (../../node_modules/@babel/parser/src/parser/expression.ts:3192:16)
      at Parser.allowInAnd [as parseExpression] (../../node_modules/@babel/parser/src/parser/expression.ts:217:17)
      at Parser.parseExpression [as parseStatementContent] (../../node_modules/@babel/parser/src/parser/statement.ts:688:23)
      at Parser.parseStatementContent [as parseStatementLike] (../../node_modules/@babel/parser/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as parseStatementListItem] (../../node_modules/@babel/parser/src/parser/statement.ts:431:17)
      at Parser.parseStatementListItem [as parseBlockOrModuleBlockBody] (../../node_modules/@babel/parser/src/parser/statement.ts:1444:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (../../node_modules/@babel/parser/src/parser/statement.ts:1417:10)
      at Parser.parseBlockBody [as parseBlock] (../../node_modules/@babel/parser/src/parser/statement.ts:1385:10)
      at Parser.parseBlock [as parseFunctionBody] (../../node_modules/@babel/parser/src/parser/expression.ts:2621:24)
      at Parser.parseFunctionBody [as parseArrowExpression] (../../node_modules/@babel/parser/src/parser/expression.ts:2562:10)
      at Parser.parseArrowExpression [as parseParenAndDistinguishExpression] (../../node_modules/@babel/parser/src/parser/expression.ts:1850:12)
      at Parser.parseParenAndDistinguishExpression [as parseExprAtom] (../../node_modules/@babel/parser/src/parser/expression.ts:1170:21)
      at Parser.parseExprAtom [as parseExprSubscripts] (../../node_modules/@babel/parser/src/parser/expression.ts:742:23)
      at Parser.parseExprSubscripts [as parseUpdate] (../../node_modules/@babel/parser/src/parser/expression.ts:721:21)
      at Parser.parseUpdate [as parseMaybeUnary] (../../node_modules/@babel/parser/src/parser/expression.ts:683:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (../../node_modules/@babel/parser/src/parser/expression.ts:417:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (../../node_modules/@babel/parser/src/parser/expression.ts:429:23)
      at Parser.parseExprOps [as parseMaybeConditional] (../../node_modules/@babel/parser/src/parser/expression.ts:384:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (../../node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at parseMaybeAssign (../../node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at Parser.callback [as allowInAnd] (../../node_modules/@babel/parser/src/parser/expression.ts:3197:12)
      at Parser.allowInAnd [as parseMaybeAssignAllowIn] (../../node_modules/@babel/parser/src/parser/expression.ts:256:17)
      at Parser.parseMaybeAssignAllowIn [as parseMaybeAssignAllowInOrVoidPattern] (../../node_modules/@babel/parser/src/parser/expression.ts:3311:17)
      at Parser.parseMaybeAssignAllowInOrVoidPattern [as parseExprListItem] (../../node_modules/@babel/parser/src/parser/expression.ts:2793:18)
      at Parser.parseExprListItem [as parseCallExpressionArguments] (../../node_modules/@babel/parser/src/parser/expression.ts:1042:14)
      at Parser.parseCallExpressionArguments [as parseCoverCallAndAsyncArrowHead] (../../node_modules/@babel/parser/src/parser/expression.ts:922:29)
      at Parser.parseCoverCallAndAsyncArrowHead [as parseSubscript] (../../node_modules/@babel/parser/src/parser/expression.ts:804:19)
      at Parser.parseSubscript [as parseSubscripts] (../../node_modules/@babel/parser/src/parser/expression.ts:763:19)
      at Parser.parseSubscripts [as parseExprSubscripts] (../../node_modules/@babel/parser/src/parser/expression.ts:748:17)
      at Parser.parseExprSubscripts [as parseUpdate] (../../node_modules/@babel/parser/src/parser/expression.ts:721:21)
      at Parser.parseUpdate [as parseMaybeUnary] (../../node_modules/@babel/parser/src/parser/expression.ts:683:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (../../node_modules/@babel/parser/src/parser/expression.ts:417:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (../../node_modules/@babel/parser/src/parser/expression.ts:429:23)
      at Parser.parseExprOps [as parseMaybeConditional] (../../node_modules/@babel/parser/src/parser/expression.ts:384:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (../../node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at Parser.parseMaybeAssign [as parseExpressionBase] (../../node_modules/@babel/parser/src/parser/expression.ts:226:23)
      at parseExpressionBase (../../node_modules/@babel/parser/src/parser/expression.ts:217:39)
      at Parser.callback [as allowInAnd] (../../node_modules/@babel/parser/src/parser/expression.ts:3192:16)
      at Parser.allowInAnd [as parseExpression] (../../node_modules/@babel/parser/src/parser/expression.ts:217:17)
      at Parser.parseExpression [as parseStatementContent] (../../node_modules/@babel/parser/src/parser/statement.ts:688:23)
      at Parser.parseStatementContent [as parseStatementLike] (../../node_modules/@babel/parser/src/parser/statement.ts:482:17)
      at Parser.parseStatementLike [as parseModuleItem] (../../node_modules/@babel/parser/src/parser/statement.ts:419:17)
      at Parser.parseModuleItem [as parseBlockOrModuleBlockBody] (../../node_modules/@babel/parser/src/parser/statement.ts:1443:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (../../node_modules/@babel/parser/src/parser/statement.ts:1417:10)
      at Parser.parseBlockBody [as parseProgram] (../../node_modules/@babel/parser/src/parser/statement.ts:229:10)
      at Parser.parseProgram [as parseTopLevel] (../../node_modules/@babel/parser/src/parser/statement.ts:203:25)
      at Parser.parseTopLevel [as parse] (../../node_modules/@babel/parser/src/parser/index.ts:83:25)
      at parse (../../node_modules/@babel/parser/src/index.ts:86:38)
      at parser (../../node_modules/@babel/core/src/parser/index.ts:29:19)
          at parser.next (<anonymous>)
      at normalizeFile (../../node_modules/@babel/core/src/transformation/normalize-file.ts:50:24)
          at normalizeFile.next (<anonymous>)
      at run (../../node_modules/@babel/core/src/transformation/index.ts:41:36)
          at run.next (<anonymous>)
      at transform (../../node_modules/@babel/core/src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at evaluateSync (../../node_modules/gensync/index.js:251:28)
      at sync (../../node_modules/gensync/index.js:89:14)
      at fn (../../node_modules/@babel/core/src/errors/rewrite-stack-trace.ts:99:14)
      at transformSync (../../node_modules/@babel/core/src/transform.ts:66:52)
      at ScriptTransformer.transformSource (../../node_modules/@jest/transform/build/ScriptTransformer.js:545:31)
      at ScriptTransformer._transformAndBuildScript (../../node_modules/@jest/transform/build/ScriptTransformer.js:674:40)
      at ScriptTransformer.transform (../../node_modules/@jest/transform/build/ScriptTransformer.js:726:19)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.175 s
Ran all test suites.
